# photon-catalysis

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: build-test.yml
photon_catalysis/: optimal_preparation.py  quadratic_preparation.py  utils.py  waring_preparation.py
test_photon_catalysis/: states.py  test_optimal_preparation.py  test_quadratic_preparation.py  test_waring_preparation.py
