[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photon_catalysis"
version = "0.1.0"
dependencies = [
    "sympy",
    "numpy",
    "jax",
    "optax",
    "scipy",
    "tqdm"
]
requires-python = ">=3.7"
description = "Code for \"Photon catalysis for general multimode multi-photon quantum state preparation\" paper."
authors = [
    {name = "Émilie Gillet", email = "emilie.gillet@etu.sorbonne-universite.fr"},
    {name = "Andrei Aralov", email = "andrei.aralov@etu.sorbonne-universite.fr"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]


[project.urls]
Homepage = "https://github.com/EQ15T/photon-catalysis"

[tool.hatch.metadata]
allow-direct-references = true
